--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@reduxjs/toolkit": "^2.3.0",
+    "@tanstack/react-query": "^5.61.0",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "react": "^18.3.1",
