refreshToken, useAuth and login separation done

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.61.0",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "react": "^18.3.1",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "^20",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
